# verdex

./: .gitignore  AUTH_SETUP.md  CORE_SERVICES_PLAN.md  DASHBOARD_README.md  HISTORY_COMPLETE.md  HISTORY_IMPLEMENTATION_PLAN.md  HISTORY_UI_UPDATES.md  IMPLEMENTATION_SUMMARY.md  PREDICTION_DASHBOARD_FEATURES.md  README.md  THEME_GUIDE.md  app.json  app.py  data.txt  ideal-app-guide.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  supabase_profiles_schema.sql
app/: _layout.tsx  index.tsx
app/(auth)/: forgot-password.tsx  login.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  device.tsx  help.tsx  history.tsx  history.tsx.backup  home.tsx  index.tsx  map.tsx  present.tsx  recommendation.tsx  settings.tsx
components/: google-map.tsx
config/: firebase.ts
constants/: crop-profiles.ts
contexts/: auth-context.tsx  bluetooth-context.tsx  theme-context.tsx
models/: lstm_soil_nitrogen_model.h5  lstm_soil_phosphorus_model.h5  soil_moisture_lstm_model.h5  soil_pH_lstm_model.keras
queries/: add_onboarding_column.sql  schema.sql  supabase_profiles_schema.sql
styles/: README.md  device.styles.ts  help.styles.ts  history-calendar.styles.ts  history.styles.ts  home.styles.ts  index.styles.ts  map.styles.ts  present.styles.ts  recommendation.styles.ts  settings.styles.ts
templates/: index.html
ui_reference/: index_backup.tsx
ui_reference/login/: code.html
ui_reference/soil_nutrients_dashboard/: code.html
utils/: messaging.ts  report-generator.ts  voice.ts
