[project]
name = "verdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "supabase>=2.22.2",
    "tensorflow>=2.20.0",
]
